[modernize] Modernize collections usage